--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,8 +3,10 @@ import { Button } from "@/components/ui/button";
 import DefaultLayout from "../layouts/Default.astro";
 import '../styles/global.css'
 import Header from "../sections/Header";
+import Hero from "@/sections/Hero";
 ---
 
 <DefaultLayout>
   <Header/>
+  <Hero/>
 </DefaultLayout>
