--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,11 @@ import DefaultLayout from "../layouts/Default.astro";
 import '../styles/global.css'
 import Header from "../sections/Header";
 import Hero from "@/sections/Hero";
+import FeatureCard from "../sections/FeaturesCard";
 ---
 
 <DefaultLayout>
   <Header/>
   <Hero/>
+  <FeatureCard/>
 </DefaultLayout>
