--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,10 +5,12 @@ import '../styles/global.css'
 import Header from "../sections/Header";
 import Hero from "@/sections/Hero";
 import FeatureCard from "../sections/FeaturesCard";
+import FeaturesGrid from "@/sections/FeaturesGrid";
 ---
 
 <DefaultLayout>
   <Header/>
   <Hero/>
   <FeatureCard/>
+  <FeaturesGrid/>
 </DefaultLayout>
