--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Header from "../sections/Header";
 import Hero from "@/sections/Hero";
 import FeatureCard from "../sections/FeaturesCard";
 import FeaturesGrid from "@/sections/FeaturesGrid";
+import LatestPost from "@/sections/LatestPost";
 ---
 
 <DefaultLayout>
@@ -13,4 +14,5 @@ import FeaturesGrid from "@/sections/FeaturesGrid";
   <Hero/>
   <FeatureCard/>
   <FeaturesGrid/>
+  <LatestPost/>
 </DefaultLayout>
