--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,13 @@ import Hero from "@/sections/Hero";
 import FeatureCard from "../sections/FeaturesCard";
 import FeaturesGrid from "@/sections/FeaturesGrid";
 import LatestPost from "@/sections/LatestPost";
+import { getCollection } from "astro:content";
+
+const posts = await getCollection("blog");
+const latestPosts = posts.sort((a,b) => {
+  if(a.data.pubDate.valueOf() === b.data.pubDate.valueOf()) return 0;
+  return a.data.pubDate.valueOf() > b.data.pubDate.valueOf() ? -1 : 1;
+}).slice(0,4)
 ---
 
 <DefaultLayout>
@@ -14,5 +21,5 @@ import LatestPost from "@/sections/LatestPost";
   <Hero/>
   <FeatureCard/>
   <FeaturesGrid/>
-  <LatestPost/>
+  <LatestPost latestPosts={latestPosts}/>
 </DefaultLayout>
