--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import LatestPost from "@/sections/LatestPost";
 import { getCollection } from "astro:content";
 import Testimonials from "@/sections/Testimonials";
 import CallToAction from "@/sections/CallToAction";
+import Footer from "@/sections/Footer";
 
 const posts = await getCollection("blog");
 const latestPosts = posts.sort((a,b) => {
@@ -26,4 +27,5 @@ const latestPosts = posts.sort((a,b) => {
   <LatestPost latestPosts={latestPosts}/>
   <Testimonials/>
   <CallToAction/>
+  <Footer/>
 </DefaultLayout>
