--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ const latestPosts = posts.sort((a,b) => {
 
 <DefaultLayout>
   <Header/>
-  <Hero/>
+  <Hero client:load/>
   <FeatureCard/>
   <FeaturesGrid/>
   <LatestPost latestPosts={latestPosts}/>
