--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const latestPosts = posts.sort((a,b) => {
 <DefaultLayout>
   <Header/>
   <Hero client:load/>
-  <FeatureCard/>
+  <FeatureCard client:load/>
   <FeaturesGrid/>
   <LatestPost latestPosts={latestPosts}/>
   <Testimonials/>
