--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ const latestPosts = posts.sort((a,b) => {
   <Hero client:load/>
   <FeatureCard client:load/>
   <FeaturesGrid client:load/>
-  <LatestPost latestPosts={latestPosts}/>
+  <LatestPost latestPosts={latestPosts} client:load/>
   <Testimonials/>
   <CallToAction/>
   <Footer/>
