--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ const latestPosts = posts.sort((a,b) => {
 ---
 
 <DefaultLayout>
-  <Header/>
+  <Header client:load/>
   <Hero client:load/>
   <FeatureCard client:load/>
   <FeaturesGrid client:load/>
