--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,6 +1,7 @@
 ---
 import { type CollectionEntry, getCollection } from 'astro:content';
-import BlogPost from '../../layouts/BlogPost.astro';
+import DefaultLayout from "../../layouts/Default.astro";
+// import BlogPost from '../../layouts/BlogPost.astro';
 
 export async function getStaticPaths() {
 	const posts = await getCollection('blog');
@@ -9,12 +10,18 @@ export async function getStaticPaths() {
 		props: post,
 	}));
 }
-type Props = CollectionEntry<'blog'>;
+// type Props = CollectionEntry<'blog'>;
 
-const post = Astro.props;
-const { Content } = await post.render();
+// const post = Astro.props;
+// const { Content } = await post.render();
 ---
 
-<BlogPost {...post.data}>
+<!-- <BlogPost {...post.data}>
 	<Content />
-</BlogPost>
+</BlogPost> -->
+
+<DefaultLayout>
+	<div>
+		Blog Post
+	</div>
+</DefaultLayout>
