--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,7 +1,86 @@
 ---
-// import { getCollection } from 'astro:content';
 
-// const posts = (await getCollection('blog')).sort(
-// 	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
-// );
+import Hexagon from "@/components/Hexagon";
+import DefaultLayout from "../../layouts/Default.astro";
+import Header from "../../sections/Header";
+import CutCornerButton from "@/components/CutCornerButton";
+import { getCollection } from 'astro:content';
+import Card from "@/components/Card";
+import { getPostColorFromCategory } from "@/utils/postUtils";
+import Tag from "@/components/Tag";
+import { cn } from "@/lib/utils";
+import {motion} from 'framer-motion'
+
+const posts = (await getCollection('blog')).sort(
+    	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
+    );
+
+const latestPost = posts[0];
 ---
+<DefaultLayout>
+    <Header client:load/>
+    <section class="py-60 relative overflow-x-clip">
+        <div class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2">
+            <Hexagon size={800} client:load duration={30} client:load/>
+        </div>
+        <div class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2">
+            <Hexagon size={1200} client:load duration={60} reverse client:load/>
+        </div>
+        <div class="container">
+            <div class="max-w-3xl mx-auto">
+
+                <p class="uppercase font-extrabold text-center text-zinc-500 tracking-wider">Latest Post</p>
+                <h1 class="font-heading font-black text-7xl text-center mt-4">{latestPost.data.title}</h1>
+                <p class="text-center text-2xl mt-6 text-zinc-400 max-w-xl mx-auto">{latestPost.data.description}</p>
+                <div class="flex justify-center mt-10">
+                    <a href={`/blog/${latestPost.slug}`}>
+                        <CutCornerButton>Read More</CutCornerButton>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="pb-[1000px]">
+        <div class="container">
+            <div class="grid grid-cols-2 gap-8">
+                <div class="flex flex-col gap-12">
+                    {posts.map((post, index) => (
+                        <motion.a 
+                        client:load
+                        href={`/blog/${post.slug}`} 
+                        className={cn(index % 2 === 0 ? "" : "hidden")}
+                        >
+
+                        <Card buttonText="Read More" color={getPostColorFromCategory(post.data.category)}>
+                            <Tag color={getPostColorFromCategory(post.data.category)}>
+                                {post.data.category}
+                            </Tag>
+                            <h2 class=" font-heading font-black text-3xl mt-4">{post.data.title}</h2>
+                            <p class="text-lg mt-6 text-zinc-400">{post.data.description}</p>
+                        </Card>
+                        </motion.a>
+                    ))}
+                </div>
+                <div class="flex flex-col gap-12 mt-24">
+                    {posts.map((post, index) => (
+                        <motion.a 
+                        client:load
+                        href={`/blog/${post.slug}`} 
+                        className={cn(index % 2 === 0 ? "hidden" : "")}
+                        >
+
+                        <Card buttonText="Read More" color={getPostColorFromCategory(post.data.category)}>
+                            <Tag color={getPostColorFromCategory(post.data.category)}>
+                                {post.data.category}
+                            </Tag>
+                            <h2 class=" font-heading font-black text-3xl mt-4">{post.data.title}</h2>
+                            <p class="text-lg mt-6 text-zinc-400">{post.data.description}</p>
+                        </Card>
+                        </motion.a>
+                    ))}
+                </div>
+            </div>
+        </div>
+    </section>
+</DefaultLayout>
