--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -2,7 +2,6 @@
 
 import Hexagon from "@/components/Hexagon";
 import DefaultLayout from "../../layouts/Default.astro";
-import Header from "../../sections/Header";
 import CutCornerButton from "@/components/CutCornerButton";
 import { getCollection } from 'astro:content';
 import Card from "@/components/Card";
@@ -11,6 +10,7 @@ import Tag from "@/components/Tag";
 import { cn } from "@/lib/utils";
 import {motion} from 'framer-motion'
 
+
 const posts = (await getCollection('blog')).sort(
     	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
     );
@@ -18,7 +18,6 @@ const posts = (await getCollection('blog')).sort(
 const latestPost = posts[0];
 ---
 <DefaultLayout>
-    <Header client:load/>
     <section class="py-60 relative overflow-x-clip">
         <div class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2">
             <Hexagon size={800} client:load duration={30} client:load/>
@@ -30,8 +29,8 @@ const latestPost = posts[0];
             <div class="max-w-3xl mx-auto">
 
                 <p class="uppercase font-extrabold text-center text-zinc-500 tracking-wider">Latest Post</p>
-                <h1 class="font-heading font-black text-7xl text-center mt-4">{latestPost.data.title}</h1>
-                <p class="text-center text-2xl mt-6 text-zinc-400 max-w-xl mx-auto">{latestPost.data.description}</p>
+                <h1 class="font-heading font-black text-5xl lg:text-7xl md:text-6xl text-center mt-4">{latestPost.data.title}</h1>
+                <p class="text-center text-xl md:text-2xl mt-6 text-zinc-400 max-w-xl mx-auto">{latestPost.data.description}</p>
                 <div class="flex justify-center mt-10">
                     <a href={`/blog/${latestPost.slug}`}>
                         <CutCornerButton>Read More</CutCornerButton>
@@ -40,16 +39,23 @@ const latestPost = posts[0];
             </div>
         </div>
     </section>
-
-    <section class="pb-[1000px]">
+    <section class="py-32 bg-zinc-900/30 backdrop-blur-sm">
         <div class="container">
-            <div class="grid grid-cols-2 gap-8">
-                <div class="flex flex-col gap-12">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="flex flex-col lg:gap-12 gap-8">
                     {posts.map((post, index) => (
                         <motion.a 
                         client:load
+                        initial={{opacity: 0, y: 20}}
+                        whileInView={{opacity: 1, y: 0}}
+                        viewport={{once: true, amount: 0.5}}
+                        transition={{
+                            duration: 0.5,
+                            ease: "easeIn"
+                        }}
                         href={`/blog/${post.slug}`} 
-                        className={cn(index % 2 === 0 ? "" : "hidden")}
+                        className={cn(index % 2 === 0 ? "" : "block md:hidden")}
+                        key={index}
                         >
 
                         <Card buttonText="Read More" color={getPostColorFromCategory(post.data.category)}>
@@ -62,12 +68,20 @@ const latestPost = posts[0];
                         </motion.a>
                     ))}
                 </div>
-                <div class="flex flex-col gap-12 mt-24">
+                <div class="hidden md:flex flex-col gap-8 lg:gap-12 mt-24">
                     {posts.map((post, index) => (
                         <motion.a 
                         client:load
+                        initial={{opacity: 0, y: 20}}
+                        whileInView={{opacity: 1, y: 0}}
+                        viewport={{once: true, amount: 0.5}}
+                        transition={{
+                            duration: 0.5,
+                            ease: "easeIn"
+                        }}
                         href={`/blog/${post.slug}`} 
                         className={cn(index % 2 === 0 ? "hidden" : "")}
+                        key={index}
                         >
 
                         <Card buttonText="Read More" color={getPostColorFromCategory(post.data.category)}>
@@ -83,4 +97,5 @@ const latestPost = posts[0];
             </div>
         </div>
     </section>
+
 </DefaultLayout>
