--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,6 +1,10 @@
 ---
 import { type CollectionEntry, getCollection } from 'astro:content';
 import DefaultLayout from "../../layouts/Default.astro";
+import InteriorHero from '@/components/InteriorHero.astro';
+import Tag from '@/components/Tag';
+import { getPostColorFromCategory } from '@/utils/postUtils';
+import InteriorContent from '@/components/InteriorContent.astro';
 // import BlogPost from '../../layouts/BlogPost.astro';
 
 export async function getStaticPaths() {
@@ -10,10 +14,10 @@ export async function getStaticPaths() {
 		props: post,
 	}));
 }
-// type Props = CollectionEntry<'blog'>;
+type Props = CollectionEntry<'blog'>;
 
-// const post = Astro.props;
-// const { Content } = await post.render();
+const post = Astro.props;
+const { Content } = await post.render();
 ---
 
 <!-- <BlogPost {...post.data}>
@@ -21,7 +25,23 @@ export async function getStaticPaths() {
 </BlogPost> -->
 
 <DefaultLayout>
-	<div>
-		Blog Post
-	</div>
+	<InteriorHero>
+		<div class="relative">
+			<div class="flex justify-center">
+				<Tag color={getPostColorFromCategory(post.data.category)}>{post.data.category}</Tag>
+			</div>
+			<h1 class="font-heading font-black text-5xl md:text-6xl lg:text-7xl text-center mt-4">{post.data.title}</h1>
+			<p class="text-center text-xl mt-8 text-zinc-400 max-w-2xl mx-auto">{post.data.description}</p>
+			<div class="flex flex-col items-center mt-8">
+				<div class="size-16 rounded-full bg-zinc-700 bg-cover bg-center"></div>
+				<div class="font-extrabold text-lg mt-3">{post.data.author.name}</div>
+				<div class="text-zinc-500">{post.data.author.title}</div>
+			</div>
+		</div>
+	</InteriorHero>
+			<InteriorContent>
+				<div class="prose prose-invert prose-lg mx-auto prose-zinc prose-headings:font-heading prose-headings:font-black prose-h2:text-3xl prose-h2:md:text-4xl prose-h2:lg:text-5xl   prose-h3:text-2xl prose-h3:md:text-3xl prose-h3:lg:text-4xl">
+					<Content />
+				</div>
+			</InteriorContent>
 </DefaultLayout>
